[2단계 - 리팩터링] 가이온(한승연) 미션 제출합니다. (#969)
* feat: 1단계 구현

* feat: 예외 개선

* feat: 리펙터링 완료

* feat: queryForObject에서 PreparedStatementSetter 오버로드 제거

* feat: 커스텀 예외 추가